fixed officer page and made it more readable

--- a/src/style.css
+++ b/src/style.css
@@ -570,7 +570,7 @@ to reposition it in the right place.*/
 /*I needed to make these since some of the descriptions written are longer than others.*/
 #president-description{
   width: 70%;
-  font-weight: 300px;5
+  font-weight: 300px;
 }
 
 #secretary-description{
